module-2/services/manifests/frontend.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: '${ namespace }'
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: 'frontend-${ canary ? "canary" : "primary" }'
  namespace: '${ namespace }'
  labels:
    app: frontend
    version: '${ canary ? "canary" : "production" }'
    stack: frontend
    tier: '${ namespace }'
    canary: '${ canary ? "true" : "false" }'
spec:
  replicas: '${ #toInt( canary ? 1 : 5 ) }'
  selector:
    matchLabels:
      app: frontend
      version: '${ canary ? "canary" : "production" }'
      stack: frontend
      tier: '${ namespace }'
      canary: '${ canary ? "true" : "false" }'
  template:
    metadata:
      labels:
        app: frontend
        version: '${ canary ? "canary" : "production" }'
        stack: frontend
        tier: '${ namespace }'
        canary: '${ canary ? "true" : "false" }'
    spec:
      containers:
      - name: primary
        image: gcr.io/PROJECT_ID/frontend
        ports:
        - containerPort: 8000
---
kind: Service
apiVersion: v1
metadata:
  name: frontend
  labels:
    app: frontend
    tier: '${ namespace }'
  namespace: '${ namespace }'
spec:
  selector:
    app: frontend
    stack: frontend
    tier: '${ namespace }'
  ports:
  - protocol: TCP
    port: 80
    name: http
    targetPort: 8000
