module-2/services/manifests/backend-vs-can-to-can-prod-to-prod.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
  namespace: production
spec:
  hosts:
    - backend
  http:
  - match:
    - sourceLabels:
        app: frontend
        version: canary
    route:
    - destination:
        host: backend
        subset: canary
        port:
          number: 80
  - match:
    - sourceLabels:
        app: frontend
        version: production
    route:
    - destination:
        host: backend
        subset: production
        port:
          number: 80
