module-2/services/manifests/frontend-vs-all-to-canary.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
  namespace: production
spec:
  hosts:
  - "*"
  gateways:
  - frontend-gateway
  http:
  - route:
    - destination:
        host: frontend
        subset: canary
        port:
          number: 80
      weight: 100
    - destination:
        host: frontend
        subset: production
        port:
          number: 80
      weight: 0
